Ajuste no exercício 1.4, para usar a tag do HTML 5 <button>.

--- a/BlogTeste2/Views/Home/NovoPost.cshtml
+++ b/BlogTeste2/Views/Home/NovoPost.cshtml
@@ -23,7 +23,7 @@
             <label>
                 Categoria: <input name="categoria" />
             </label>
-            <input type="submit" value="Cadastrar" />
+            <button type="submit">Cadastrar</button>
         </form>
     </div>
 </body>
