--- a/BlogTeste2/Views/Home/NovoPost.cshtml
+++ b/BlogTeste2/Views/Home/NovoPost.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div> 
-        <form action="/Home/AdicionaPost">
+        <form action="/Home/AdicionaPost" method="post">
             <label>
                 Título: <input name="titulo" />
             </label>
