--- a/BlogTeste2/Views/Home/Index.cshtml
+++ b/BlogTeste2/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
                     <th>Título</th>
                     <th>Resumo</th>
                     <th>Categoria</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,6 +29,7 @@
                         <td>@p.Titulo</td>
                         <td>@p.Resumo</td>
                         <td>@p.Categoria</td>
+                        <td><a href="/Home/RemovePost/@p.Id">Remover</a></td>
                     </tr>
                 }
             </tbody>
