--- a/BlogTeste2/Views/Home/Index.cshtml
+++ b/BlogTeste2/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 @foreach (var p in Model)
                 {
                     <tr>
-                        <td>@p.Titulo</td>
+                        <td><a href="/Home/Visualiza/@p.Id">@p.Titulo</a></td>
                         <td>@p.Resumo</td>
                         <td>@p.Categoria</td>
                         <td><a href="/Home/RemovePost/@p.Id">Remover</a></td>
