--- a/BlogTeste2/Views/Home/Index.cshtml
+++ b/BlogTeste2/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
                     <th>Título</th>
                     <th>Resumo</th>
                     <th>Categoria</th>
+                    <th>Publicado?</th>
                     <th>Ações</th>
                 </tr>
             </thead>
@@ -29,7 +30,19 @@
                         <td><a href="/Home/Visualiza/@p.Id">@p.Titulo</a></td>
                         <td>@p.Resumo</td>
                         <td>@p.Categoria</td>
-                        <td><a href="/Home/RemovePost/@p.Id">Remover</a></td>
+                        <td>
+                            @if(p.Publicado)
+                            {
+                                @Html.Raw(string.Format("{0:dd/MM/yyyy}", p.DataPublicacao))
+                            } else
+                            {
+                                @Html.Raw("Não")
+                            }
+                        </td>
+                        <td>
+                            <a href="/Home/RemovePost/@p.Id">Remover</a>
+                            <a href="/Home/PublicaPost/@p.Id">Publicar</a>
+                        </td>
                     </tr>
                 }
             </tbody>
