--- a/BlogTeste2/Views/Home/Visualiza.cshtml
+++ b/BlogTeste2/Views/Home/Visualiza.cshtml
@@ -15,6 +15,8 @@
     <div> 
         <form action="/Home/EditaPost" method="post">
             <input type="hidden" name="id" value="@Model.Id" />
+            <input type="hidden" name="publicado" value="@Model.Publicado.ToString()" />
+            <input type="hidden" name="dataPublicacao" value="@Model.DataPublicacao" />
             <label>
                 Título: <input name="titulo" value="@Model.Titulo" />
             </label>
