--- a/BlogTeste2/Views/Home/NovoPost.cshtml
+++ b/BlogTeste2/Views/Home/NovoPost.cshtml
@@ -15,15 +15,15 @@
     <div> 
         <form action="/Home/AdicionaPost" method="post">
             <label>
-                Título: <input name="titulo" />
+                Título: <input name="titulo" value="@Model.Titulo" />
             </label>
             @Html.ValidationMessage("titulo")
             <label>
-                Resumo: <input name="resumo" />
+                Resumo: <input name="resumo" value="@Model.Resumo" />
             </label>
             @Html.ValidationMessage("resumo")
             <label>
-                Categoria: <input name="categoria" />
+                Categoria: <input name="categoria" value="@Model.Categoria" />
             </label>
             @Html.ValidationMessage("categoria")
             <button type="submit">Cadastrar</button>
