--- a/BlogTeste2/Views/Home/NovoPost.cshtml
+++ b/BlogTeste2/Views/Home/NovoPost.cshtml
@@ -1,11 +1,5 @@
 ﻿@model BlogTeste2.Models.Post
-
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -15,11 +9,11 @@
     <div> 
         <form action="/Home/AdicionaPost" method="post">
             <label>
-                Título: <input name="titulo" value="@Model.Titulo" />
+                Título: <input name="titulo" value="@Model.Titulo" maxlength="20" required />
             </label>
             @Html.ValidationMessage("titulo")
             <label>
-                Resumo: <input name="resumo" value="@Model.Resumo" />
+                Resumo: <input name="resumo" value="@Model.Resumo" required />
             </label>
             @Html.ValidationMessage("resumo")
             <label>
@@ -29,5 +23,10 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
+    <script src="~/Scripts/jquery-3.1.1.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script>
+	    $("form").validate();
+    </script>
 </body>
 </html>
