--- a/BlogTeste2/Views/Home/Index.cshtml
+++ b/BlogTeste2/Views/Home/Index.cshtml
@@ -1,10 +1,5 @@
 ﻿@model IList<BlogTeste2.Models.Post>
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -13,6 +8,7 @@
 <body>
     <div> 
         <h2>Lista de Posts</h2>
+        @Html.ActionLink("Incluir Post", "NovoPost")
         <table>
             <thead>
                 <tr>
@@ -27,7 +23,7 @@
                 @foreach (var p in Model)
                 {
                     <tr>
-                        <td><a href="/Home/Visualiza/@p.Id">@p.Titulo</a></td>
+                        <td>@Html.ActionLink(p.Titulo, "Visualiza", new { id = p.Id })</td>
                         <td>@p.Resumo</td>
                         <td>@p.Categoria</td>
                         <td>
@@ -40,8 +36,8 @@
                             }
                         </td>
                         <td>
-                            <a href="/Home/RemovePost/@p.Id">Remover</a>
-                            <a href="/Home/PublicaPost/@p.Id">Publicar</a>
+                            @Html.ActionLink("Remover", "RemovePost", new { id = p.Id })
+                            @Html.ActionLink("Publicar", "PublicaPost", new { id = p.Id })
                         </td>
                     </tr>
                 }
