--- a/BlogTeste2/Views/Home/Visualiza.cshtml
+++ b/BlogTeste2/Views/Home/Visualiza.cshtml
@@ -6,30 +6,31 @@
     <title>Visualiza Post</title>
 </head>
 <body>
-    <div> 
-        <form action="/Home/EditaPost" method="post">
-            <input type="hidden" name="id" value="@Model.Id" />
-            <input type="hidden" name="publicado" value="@Model.Publicado.ToString()" />
-            <input type="hidden" name="dataPublicacao" value="@Model.DataPublicacao" />
-            <label>
-                Título: <input name="titulo" value="@Model.Titulo" maxlength="20" required />
-            </label>
-            @Html.ValidationMessage("titulo")
-            <label>
-                Resumo: <input name="resumo" value="@Model.Resumo" required />
-            </label>
-            @Html.ValidationMessage("resumo")
-            <label>
-                Categoria: <input name="categoria" value="@Model.Categoria" />
-            </label>
-            @Html.ValidationMessage("categoria")
+    <div>
+        @using (Html.BeginForm("EditaPost", "Home"))
+        {
+
+            @Html.HiddenFor(p => p.Id)
+            @Html.HiddenFor(p => p.Publicado)
+            @Html.HiddenFor(p => p.DataPublicacao)
+
+            @Html.LabelFor(p => p.Titulo)
+            @Html.TextBoxFor(p => p.Titulo)
+            @Html.ValidationMessageFor(p => p.Titulo)
+
+            @Html.LabelFor(p => p.Resumo)
+            @Html.TextBoxFor(p => p.Resumo)
+            @Html.ValidationMessageFor(p => p.Resumo)
+
+            @Html.LabelFor(p => p.Categoria)
+            @Html.TextBoxFor(p => p.Categoria)
+            @Html.ValidationMessageFor(p => p.Categoria)
+
             <button type="submit">Cadastrar</button>
-        </form>
+        }
     </div>
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
-    <script>
-	    $("form").validate();
-    </script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 </body>
 </html>
