--- a/BlogTeste2/Views/Home/NovoPost.cshtml
+++ b/BlogTeste2/Views/Home/NovoPost.cshtml
@@ -1,35 +1,12 @@
 ﻿@model BlogTeste2.Models.Post
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Novo Post</title>
-    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" />
-</head>
-<body>
-    <div> 
-        @using(Html.BeginForm("AdicionaPost", "Home"))
-        {
-            @Html.EditorFor(p => p)
 
-            <button type="submit">Cadastrar</button>
-        }
-    </div>
-    <script src="~/Scripts/jquery-3.1.1.js"></script>
-    <script src="~/Scripts/jquery.validate.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script src="~/Scripts/jquery-ui-1.12.1.js"></script>
-    <script>
-        $("input[name=Categoria").autocomplete({
-            source: function (request, response) {
-                $.post(
-                    "@Url.Action("CategoriaAutocomplete")",
-                    { term: request.term },
-                    function (data) {
-                        response(data);
-                    });
-            },
-        });
-    </script>
-</body>
-</html>
+@using(Html.BeginForm("AdicionaPost", "Home"))
+{
+    @Html.EditorFor(p => p)
+
+    <button type="submit">Cadastrar</button>
+}
+
+@section Scripts{
+    @Html.Partial("_Scripts")
+}
