--- a/BlogTeste2/Views/Home/Visualiza.cshtml
+++ b/BlogTeste2/Views/Home/Visualiza.cshtml
@@ -1,40 +1,17 @@
 ﻿@model BlogTeste2.Models.Post
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Visualiza Post</title>
-    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" />
-</head>
-<body>
-    <div>
-        @using (Html.BeginForm("EditaPost", "Home"))
-        {
 
-            @Html.HiddenFor(p => p.Id)
-            @Html.HiddenFor(p => p.Publicado)
-            @Html.HiddenFor(p => p.DataPublicacao)
+@using (Html.BeginForm("EditaPost", "Home"))
+{
 
-            @Html.EditorFor(p => p)
+    @Html.HiddenFor(p => p.Id)
+    @Html.HiddenFor(p => p.Publicado)
+    @Html.HiddenFor(p => p.DataPublicacao)
 
-            <button type="submit">Cadastrar</button>
-        }
-    </div>
-    <script src="~/Scripts/jquery-3.1.1.js"></script>
-    <script src="~/Scripts/jquery.validate.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script src="~/Scripts/jquery-ui-1.12.1.js"></script>
-    <script>
-        $("input[name=Categoria").autocomplete({
-            source: function (request, response) {
-                $.post(
-                    "@Url.Action("CategoriaAutocomplete")",
-                    { term: request.term },
-                    function (data) {
-                        response(data);
-                    });
-            },
-        });
-    </script>
-</body>
-</html>
+    @Html.EditorFor(p => p)
+
+    <button type="submit">Cadastrar</button>
+}
+
+@section Scripts{
+    @Html.Partial("_Scripts")
+}
