--- a/BlogTeste2/Views/Shared/_Layout.cshtml
+++ b/BlogTeste2/Views/Shared/_Layout.cshtml
@@ -4,9 +4,18 @@
     <meta name="viewport" content="width=device-width" />
     <title>Resenha Cultural</title>
     <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" type="text/css" />
+    <link rel="stylesheet" href="~/Content/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="~/Content/estilo.css" type="text/css" />
 </head>
 <body>
-    @RenderBody()
+    @Html.Partial("Cabecalho")
+    <div class="container">
+        <main>
+            @RenderBody()
+        </main>
+        @Html.Partial("Lateral")
+    </div>
+    @Html.Partial("Rodape")
     <!-- seção opcional para carregar os scripts -->
     @RenderSection("Scripts", false)
 </body>
