--- a/BlogTeste2/Views/Home/Index.cshtml
+++ b/BlogTeste2/Views/Home/Index.cshtml
@@ -1,4 +1,12 @@
 ﻿@model IList<BlogTeste2.Models.Post>
+
+@if (Model.Count == 0)
+{
+    <article>
+        <p>Não existem resultados para a pesquisa realizada.</p>
+    </article>
+}
+
 @foreach (var p in Model)
 {
     <article>
