--- a/BlogTeste2/Views/Shared/_Layout.cshtml
+++ b/BlogTeste2/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/Content/estilo.css" type="text/css" />
 </head>
 <body>
+    @Html.ActionLink("Login", "Login", "Autenticacao", null, new { id = "login", @class = "btn btn-default" })
     @Html.Partial("Cabecalho")
     <div class="container">
         <main>
