--- a/BlogTeste2/Views/Home/Index.cshtml
+++ b/BlogTeste2/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IList<BlogTeste2.Models.Post>
 
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 @if (Model.Count == 0)
 {
     <article>
