--- a/BlogTeste2/Content/estilo.css
+++ b/BlogTeste2/Content/estilo.css
@@ -54,7 +54,7 @@ main>form+p {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
-    margin: 15%;
+    vertical-align: middle;
 }
 
 #login-form button {
