--- a/BlogTeste2/Views/Autenticacao/Login.cshtml
+++ b/BlogTeste2/Views/Autenticacao/Login.cshtml
@@ -13,21 +13,29 @@
 </head>
 <body>
     <div class="container">
-        <main id="login-form">
-            <h2>Resenha Cultural - Login</h2>
-            @Html.ValidationSummary()
-            @using (Html.BeginForm())
+        <main>
+            
+            @using (Html.BeginForm("Login", "Autenticacao", FormMethod.Post, new { id = "login-form" }))
             {
-                @Html.LabelFor(l => l.LoginName)
-                @Html.TextBoxFor(l => l.LoginName, new { @class = "form-control" })
-                @Html.ValidationMessageFor(l => l.LoginName)
+                <h2>Login</h2>
+                <div class="has-error">
+                    @Html.ValidationSummary()
+                </div>
 
-                @Html.LabelFor(l => l.Password)
-                @Html.TextBoxFor(l => l.Password, new { @class = "form-control" })
-                @Html.ValidationMessageFor(l => l.Password)
+                <div class="form-group">
+                    @Html.LabelFor(u => u.LoginName)
+                    @Html.TextBoxFor(u => u.LoginName, new { @class = "form-control" } )
+                </div>
 
-                <button class="btn btn-primary" type="submit">Login</button>
+                <div class="form-group">
+                    @Html.LabelFor(u => u.Password)
+                    @Html.PasswordFor(u => u.Password, new { @class = "form-control" })
+                </div>
+
+                <button class="btn btn-default" type="submit">Entrar</button>
+                <p>Não possui conta? @Html.ActionLink("Registre-se", "Registro") gratuitamente!.</p>
             }
+            
         </main>
     </div>
 </body>
